--- a/icon-fonts/fontawesome-5.0.6/less/_variables.less
+++ b/icon-fonts/fontawesome-5.0.6/less/_variables.less
@@ -7,7 +7,7 @@
 @fa-css-prefix:       fa;
 @fa-version:          "5.0.6";
 @fa-border-color:     #eee;
-@fa-inverse:          #fff;
+@fa-inverse:          #F2F2F2;
 @fa-li-width:         2em;
 
 @fa-var-500px: "\f26e";
