--- a/css/responsive.css
+++ b/css/responsive.css
@@ -119,7 +119,7 @@
 
 
 .filter-icon.come {
-    background: #fff;
+    background: #F2F2F2;
     padding: 7px;
     height: 33px;    
     bottom: 20px;
