--- a/icon-fonts/fontawesome-5.0.6/css/fontawesome.css
+++ b/icon-fonts/fontawesome-5.0.6/css/fontawesome.css
@@ -183,7 +183,7 @@
   font-size: 2em; }
 
 .fa-inverse {
-  color: #fff; }
+  color: #F2F2F2; }
 
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
 readers do not read off random characters that represent icons */
