--- a/icon-fonts/fontawesome-5.0.6/scss/_variables.scss
+++ b/icon-fonts/fontawesome-5.0.6/scss/_variables.scss
@@ -6,7 +6,7 @@ $fa-font-size-base:           16px !default;
 $fa-css-prefix:               fa !default;
 $fa-version:                  "5.0.6" !default;
 $fa-border-color:             #eee !default;
-$fa-inverse:                  #fff !default;
+$fa-inverse:                  #F2F2F2 !default;
 $fa-li-width:                 2em !default;
 
 // Convenience function used to set content property
