--- a/css/style.css
+++ b/css/style.css
@@ -1716,6 +1716,12 @@ max-width: 800px;
     padding-left: 0;                   
 }
 
+#fullscreen-galaxy-wireframes {
+    background: url("../img/works/Galaxy/Wireframes-Galaxy.png") repeat scroll center center / cover;
+    height: 100vh;
+    width: 100%;
+  }
+
 #fullscreen-usatoday-styleguide {
     background: url("../img/works/work-1/Social-Video-Styleguide.png") repeat scroll center center / cover;
   height: 50vh;
@@ -1805,7 +1811,17 @@ background-color: black;
 
     background: linear-gradient(180deg, rgba(112,0,255,1) 0%, rgba(21,22,27,1) 100%);
 }
+.purple-gradient-galaxy-bg{
+
+    background: linear-gradient(180deg, rgba(21,22,27,1) 0%, rgba(112,0,255,1) 100%);
+}
+
 .galaxy-bg-to-black{
 
     background: linear-gradient(180deg, rgba(21,22,27,1) 0%, rgba(0,0,0,1) 100%);
+}
+
+.black-bg-to-galaxy{
+
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(21,22,27,1) 100%);
 }
