--- a/css/style.css
+++ b/css/style.css
@@ -100,14 +100,14 @@ section{
 }
 
 .midnightHeader.dark .logo{
-    background: url(../img/logo-b.png) left top no-repeat;
+    background: url(../img/logo-b.svg) left top no-repeat;
     background-size: 100%;
     width: 245px;
     height: 21px;
 }
 
 .midnightHeader.white .logo{
-    background: url(../img/logo-w.png) left top no-repeat;
+    background: url(../img/logo-w.svg) left top no-repeat;
     background-size: 100%;
     width: 245px;
     height: 21px;
