--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body{
 p{
   font-size: 17px;
   line-height: 32px;
+  font-weight: 300;
 }
 
 .fadeffect{
@@ -1396,9 +1397,11 @@ footer .copyright{
     color: #ababab;
 }
 
+
 footer .social-icons{
     border-bottom: 1px solid rgba(119, 119, 119, 0.57);
 }
+
 
 
 
