--- a/css/style.css
+++ b/css/style.css
@@ -1798,6 +1798,9 @@ max-width: 800px;
     background-color: #7000FF;
 }
 
+.galaxy-bg-purple-shade{
+background-color: #6300E2;
+}
 .black-bg{
 background-color: black;
 }
