log and links change
Text tracking -1px update, color of links, new logotype

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,6 +65,7 @@
 
     .portfolio-item figcaption .title {
         font-size: 19px;
+        letter-spacing: -2px;
     }
 
     .portfolio-item.video .video-wrapper{
