Spacing like it should!

--- a/css/style.css
+++ b/css/style.css
@@ -1672,7 +1672,7 @@ footer .social-icons {
   }
 
   .grid-item:hover {
-    transform: scale(1) !important;
+    transform: translatey(-10px) !important;
   }
 
   .portfolio-item:hover {
