--- a/css/margins.css
+++ b/css/margins.css
@@ -1,102 +1,118 @@
 /* Margins */
 
-.top_15{
-    margin-top: 15px;
+.top_15 {
+  margin-top: 15px;
 }
 
-.top_30{
-    margin-top: 30px;
+.top_30 {
+  margin-top: 30px;
 }
 
-.top_45{
-    margin-top: 45px;
+.top_45 {
+  margin-top: 45px;
 }
 
-.top_60{
-    margin-top: 60px;
+.top_60 {
+  margin-top: 60px;
 }
 
-.top_90{
-    margin-top: 90px;
+.top_90 {
+  margin-top: 90px;
 }
 
-.top_120{
-    margin-top: 120px;
+.top_120 {
+  margin-top: 120px;
 }
 
-.padding_30{
-   padding: 30px 0; 
+.padding_30 {
+  padding: 30px 0;
 }
 
-.padding_30_sides{
-   padding-left: 30px 0;
-    padding-right: 30px 0; 
+.padding_30_sides {
+  padding-left: 30px 0;
+  padding-right: 30px 0;
 }
 
-.padding_45{
-   padding: 45px 0; 
+.padding_45 {
+  padding: 45px 0;
 }
 
-.padding_60{
-   padding: 60px 0; 
+.padding_60 {
+  padding: 60px 0;
 }
 
-.padding_90{
-   padding: 90px 0; 
+.padding_90 {
+  padding: 90px 0;
 }
 
-.padding_120{
-   padding: 120px 0; 
+.padding_120 {
+  padding: 120px 0;
 }
 
-.bottom_15{
-    margin-bottom: 15px;
+.bottom_15 {
+  margin-bottom: 15px;
 }
 
-.bottom_30{
-    margin-bottom: 30px;
+.bottom_30 {
+  margin-bottom: 30px;
 }
 
-.bottom_45{
-    margin-bottom: 45px;
+.bottom_45 {
+  margin-bottom: 45px;
 }
 
-.bottom_60{
-    margin-bottom: 60px;
+.bottom_60 {
+  margin-bottom: 60px;
 }
 
-.bottom_90{
-    margin-bottom: 90px;
+.bottom_90 {
+  margin-bottom: 90px;
 }
 
-.bottom_120{
-    margin-bottom: 120px;
+.bottom_120 {
+  margin-bottom: 120px;
 }
 
-.padbot_15{
-    padding-bottom: 15px;
+.padbot_15 {
+  padding-bottom: 15px;
 }
 
-.padbot_30{
-    padding-bottom: 30px;
+.padbot_30 {
+  padding-bottom: 30px;
 }
 
-.padbot_45{
-    padding-bottom: 45px;
+.padbot_45 {
+  padding-bottom: 45px;
 }
 
-.padbot_60{
-    padding-bottom: 60px;
+.padbot_60 {
+  padding-bottom: 60px;
 }
 
-.padbot_90{
-    padding-bottom: 90px;
+.padbot_90 {
+  padding-bottom: 90px;
 }
 
-.padbot_120{
-    padding-bottom: 120px;
+.padbot_120 {
+  padding-bottom: 120px;
 }
 
-.padbot_200{
-    padding-bottom: 200px;
+.padbot_200 {
+  padding-bottom: 200px;
+}
+
+.padtop_30 {
+  padding-top: 30px;
+}
+.padtop_45 {
+  padding-top: 45px;
+}
+.padtop_60 {
+  padding-top: 60px;
+}
+.padtop_90 {
+  padding-top: 90px;
+}
+.padtop_120 {
+  padding-top: 120px;
 }
