--- a/css/style.css
+++ b/css/style.css
@@ -1885,6 +1885,10 @@ footer .social-icons {
   color: #f2f2f2;
 }
 
+.grey-text {
+  color: #404040;
+}
+
 .no-gutter {
   margin-right: 0;
   margin-left: 0;
