Spanish Version Done
Good, come back later

--- a/css/style.css
+++ b/css/style.css
@@ -1966,6 +1966,9 @@ footer .social-icons {
 .purple {
   background-color: #484266;
 }
+.green {
+  background-color: #00a83e;
+}
 
 .galaxy-bg {
   background-color: #15161b;
