--- a/css/margins.css
+++ b/css/margins.css
@@ -24,6 +24,14 @@
   margin-top: 120px;
 }
 
+.padding_10 {
+  padding: 10px 0;
+}
+
+.padding_20 {
+  padding: 20px 0;
+}
+
 .padding_30 {
   padding: 30px 0;
 }
