--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ a:active {
   font-size: 18px;
   line-height: 18px;
   font-weight: 500;
+  transition: all 500ms ease;
 }
 
 .nav-item > li > a:hover {
