--- a/toucan/css/orange.css
+++ b/toucan/css/orange.css
@@ -32,14 +32,14 @@
   --color-secondary: white;
   --color-tertiary: #232325;
   --font-color: #232325;
-  --toggle-menu-icon: url(img/icons/menu-light.svg);
+  --toggle-menu-icon: url(toucan/img/icons/menu-light.svg);
 }
 .theme-dark {
   --color-primary: #ffa334;
   --color-secondary: #232325;
   --color-tertiary: white;
   --font-color: whitesmoke;
-  --toggle-menu-icon: url(img/icons/menu-dark.svg);
+  --toggle-menu-icon: url(toucan/img/icons/menu-dark.svg);
 }
 
 /* 1. Navigation */
@@ -155,7 +155,7 @@ a.nav-link:hover {
 .hero-img-1 {
   height: 80vh; /* Change this number to change the height of the image */
   min-height: 500px;
-  background-image: url("../img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
+  background-image: url("toucan/img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
