--- a/toucan/css/blue.css
+++ b/toucan/css/blue.css
@@ -32,14 +32,14 @@
   --color-secondary: white;
   --color-tertiary: #232325;
   --font-color: #232325;
-  --toggle-menu-icon: url(toucan/img/icons/menu-light.svg);
+  --toggle-menu-icon: url("/toucan/img/icons/menu-light.svg");
 }
 .theme-dark {
   --color-primary: #3ac3ff;
   --color-secondary: #232325;
   --color-tertiary: white;
   --font-color: whitesmoke;
-  --toggle-menu-icon: url(toucan/img/icons/menu-dark.svg);
+  --toggle-menu-icon: url("/toucan/img/icons/menu-dark.svg");
 }
 
 /* 1. Navigation */
@@ -82,11 +82,11 @@
 /* Left Arrow Icon */
 
 .carousel-control-prev-icon {
-  background-image: url(toucan/img/icons/left-chevron.svg);
+  background-image: url("/toucan/img/icons/left-chevron.svg");
 }
 /* Right Arrow Icon */
 .carousel-control-next-icon {
-  background-image: url(toucan/img/icons/right-chevron.svg);
+  background-image: url("/toucan/img/icons/right-chevron.svg");
 }
 
 .carousel-control-next-icon,
