--- a/toucan/css/turquoise.css
+++ b/toucan/css/turquoise.css
@@ -82,11 +82,11 @@
 /* Left Arrow Icon */
 
 .carousel-control-prev-icon {
-  background-image: url(../img/icons/left-chevron.svg);
+  background-image: url("/toucan/img/icons/left-chevron.svg");
 }
 /* Right Arrow Icon */
 .carousel-control-next-icon {
-  background-image: url(../img/icons/right-chevron.svg);
+  background-image: url("/toucan/img/icons/right-chevron.svg");
 }
 
 .carousel-control-next-icon,
@@ -155,7 +155,7 @@ a.nav-link:hover {
 .hero-img-1 {
   height: 80vh; /* Change this number to change the height of the image */
   min-height: 500px;
-  background-image: url("toucan/img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
+  background-image: url("/toucan/img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
