--- a/toucan/css/mint.css
+++ b/toucan/css/mint.css
@@ -34,6 +34,7 @@
   --color-secondary: white;
   --color-tertiary: #232325;
   --font-color: #232325;
+  --links-color: #e60073;
   --toggle-menu-icon: url("/img/icons/menu-light.svg");
 }
 .theme-dark {
@@ -41,6 +42,7 @@
   --color-secondary: #232325;
   --color-tertiary: white;
   --font-color: whitesmoke;
+  --links-color: #ff5cad;
   --toggle-menu-icon: url("/img/icons/menu-dark.svg");
 }
 
@@ -126,11 +128,16 @@
 
 /* 3. Links */
 
-a {
-  color: hotpink;
+code {
+  color: var(--links-color);
 }
+
+a {
+  color: var(--links-color);
+}
+
 a:hover {
-  color: var(--color-secondary);
+  color: var(--color-tertiary);
   text-decoration: underline;
 }
 
@@ -291,6 +298,9 @@ button.navbar-toggler:focus {
 
 /* 6. Text Colors */
 .text-color-x {
+  color: var(--color-secondary);
+}
+.text-color-x:hover {
   color: var(--color-secondary);
 }
 
