--- a/toucan/css/mint.css
+++ b/toucan/css/mint.css
@@ -35,7 +35,7 @@
   --color-tertiary: #232325;
   --font-color: #232325;
   --links-color: #e60073;
-  --toggle-menu-icon: url("/img/icons/menu-light.svg");
+  --toggle-menu-icon: url("../img/icons/menu-light.svg");
 }
 .theme-dark {
   --color-primary: #26e482;
@@ -43,7 +43,7 @@
   --color-tertiary: white;
   --font-color: whitesmoke;
   --links-color: #ff5cad;
-  --toggle-menu-icon: url("/img/icons/menu-dark.svg");
+  --toggle-menu-icon: url("../img/icons/menu-dark.svg");
 }
 
 /* 1. Navigation */
@@ -90,11 +90,11 @@
 /* Left Arrow Icon */
 
 .carousel-control-prev-icon {
-  background-image: url("/img/icons/left-chevron.svg");
+  background-image: url("../img/icons/left-chevron.svg");
 }
 /* Right Arrow Icon */
 .carousel-control-next-icon {
-  background-image: url("/img/icons/right-chevron.svg");
+  background-image: url("../img/icons/right-chevron.svg");
 }
 
 .carousel-control-next-icon,
@@ -172,7 +172,7 @@ a.nav-link:hover {
 .hero-img-1 {
   height: 80vh; /* Change this number to change the height of the image */
   min-height: 500px;
-  background-image: url("/img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
+  background-image: url("../img/works/work-9/pexels-steve-johnson-2784948.jpg"); /* Change the image itself here */
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
