/toucan/img/.... that is the path
/toucan/img/icons/left-chevron.svg

.theme-light {
  --color-primary: #26e482;
  --color-secondary: white;
  --color-tertiary: #232325;
  --font-color: #232325;
  --links-color: #e60073;
  --toggle-menu-icon: url("/toucan/img/icons/menu-light.svg");
}
.theme-dark {
  --color-primary: #26e482;
  --color-secondary: #232325;
  --color-tertiary: white;
  --font-color: whitesmoke;
  --links-color: #ff5cad;
  --toggle-menu-icon: url("/toucan/img/icons/menu-dark.svg");
}

--- a/toucan/css/mint.css
+++ b/toucan/css/mint.css
@@ -90,11 +90,11 @@
 /* Left Arrow Icon */
 
 .carousel-control-prev-icon {
-  background-image: url("../img/icons/left-chevron.svg");
+  background-image: url("/toucan/img/icons/left-chevron.svg");
 }
 /* Right Arrow Icon */
 .carousel-control-next-icon {
-  background-image: url("../img/icons/right-chevron.svg");
+  background-image: url("/toucan/img/icons/right-chevron.svg");
 }
 
 .carousel-control-next-icon,
