--- a/toucan/css/turquoise.css
+++ b/toucan/css/turquoise.css
@@ -88,7 +88,7 @@
 /* Left Arrow Icon */
 
 .carousel-control-prev-icon {
-  background-image: url("/img/icons/left-chevron.svg");
+  background-image: url("/toucan/img/icons/left-chevron.svg");
 }
 /* Right Arrow Icon */
 .carousel-control-next-icon {
