--- a/toucan/css/turquoise.css
+++ b/toucan/css/turquoise.css
@@ -82,7 +82,7 @@
 }
 
 .navbar-toggler:focus {
-  box-shadow: 0 0 0 2px var(--color-tertiary);
+  box-shadow: 0 0 0 2px var(--color-primary);
 }
 
 /* Left Arrow Icon */
