PAth problems resolved /img.....
.theme-light {
  --color-primary: #26e482;
  --color-secondary: white;
  --color-tertiary: #232325;
  --font-color: #232325;
  --links-color: #e60073;
  --toggle-menu-icon: url("/img/icons/menu-light.svg");
}
.theme-dark {
  --color-primary: #26e482;
  --color-secondary: #232325;
  --color-tertiary: white;
  --font-color: whitesmoke;
  --links-color: #ff5cad;
  --toggle-menu-icon: url("/img/icons/menu-dark.svg");
}

--- a/toucan/css/blue.css
+++ b/toucan/css/blue.css
@@ -307,6 +307,9 @@ button.navbar-toggler:focus {
 }
 
 /* 7. Background Colors */
+.bg-pale-night {
+  background-color: #303030;
+}
 
 .highlight-color {
   background-color: var(--color-primary);
