--- a/toucan/css/orange.css
+++ b/toucan/css/orange.css
@@ -307,6 +307,9 @@ button.navbar-toggler:focus {
 }
 
 /* 7. Background Colors */
+.bg-pale-night {
+  background-color: #303030;
+}
 
 .highlight-color {
   background-color: var(--color-primary);
